[gd_scene load_steps=8 format=4 uid="uid://cuc0vl2ot0tjk"]

[ext_resource type="Script" path="res://script/MAP/Lab_savePoint.gd" id="1_bwgca"]
[ext_resource type="TileSet" uid="uid://c2pol70fr0p1o" path="res://scene/MAP/Lab_savePoint.tres" id="2_6tci0"]
[ext_resource type="PackedScene" uid="uid://3vbgdh3x0pe3" path="res://scene/player.tscn" id="4_eemfa"]
[ext_resource type="PackedScene" uid="uid://1xnl850wcg0s" path="res://scene/npc.tscn" id="5_daqkn"]
[ext_resource type="PackedScene" uid="uid://ce48545shubph" path="res://scene/item/stick_collectable.tscn" id="6_l82bj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wt11"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_glhmy"]
size = Vector2(15.75, 15.375)

[node name="Lab_savePoint" type="Node2D"]
script = ExtResource("1_bwgca")

[node name="TileMap" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Ground" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAATAAsAAgAFAAUAAAATAAoAAgAFAAMAAAATAAkAAgAFAAMAAAATAAgAAgAFAAMAAAATAAcAAgAFAAMAAAATAAYAAgAFAAMAAAATAAUAAgAFAAMAAAATAAQAAgAFAAMAAAATAAMAAgAFAAMAAAATAAIAAgAFAAMAAAATAAEAAgAFAAMAAAATAAAAAgAFAAMAAAATAP//AgAFAAMAAAATAP7/AgAFAAMAAAATAP3/AgAFAAMAAAATAPz/AgAFAAMAAAATAPv/AgADAAAAAAASAAsAAgAEAAUAAAASAAoAAgABAAIAAAASAAkAAgABAAQAAAASAAgAAgACAAIAAAASAAcAAgAEAAMAAAASAAYAAgABAAEAAAASAAUAAgABAAEAAAASAAQAAgACAAIAAAASAAMAAgADAAMAAAASAAIAAgABAAIAAAASAAEAAgABAAEAAAASAAAAAgAEAAIAAAASAP//AgABAAQAAAASAP7/AgABAAQAAAASAP3/AgADAAIAAAASAPz/AgACAAQAAAASAPv/AgABAAAAAAARAAsAAgADAAUAAAARAAoAAgABAAIAAAARAAkAAgADAAMAAAARAAgAAgADAAIAAAARAAcAAgADAAIAAAARAAYAAgADAAIAAAARAAUAAgAEAAMAAAARAAQAAgACAAMAAAARAAMAAgABAAIAAAARAAIAAgAEAAIAAAARAAEAAgAEAAMAAAARAAAAAgABAAQAAAARAP//AgADAAIAAAARAP7/AgACAAIAAAARAP3/AgABAAEAAAARAPz/AgACAAIAAAARAPv/AgACAAAAAAAQAAsAAgAEAAUAAAAQAAoAAgADAAIAAAAQAAkAAgADAAQAAAAQAAgAAgAEAAIAAAAQAAcAAgACAAIAAAAQAAYAAgACAAQAAAAQAAUAAgACAAQAAAAQAAQAAgAEAAMAAAAQAAMAAgABAAMAAAAQAAIAAgADAAIAAAAQAAEAAgADAAIAAAAQAAAAAgABAAEAAAAQAP//AgACAAIAAAAQAP7/AgABAAIAAAAQAP3/AgAEAAMAAAAQAPz/AgABAAMAAAAQAPv/AgACAAAAAAAPAAsAAgADAAUAAAAPAAoAAgACAAEAAAAPAAkAAgACAAMAAAAPAAgAAgACAAMAAAAPAAcAAgAEAAIAAAAPAAYAAgAEAAMAAAAPAAUAAgABAAMAAAAPAAQAAgABAAMAAAAPAAMAAgABAAQAAAAPAAIAAgABAAEAAAAPAAEAAgADAAMAAAAPAAAAAgACAAEAAAAPAP//AgACAAMAAAAPAP7/AgAEAAMAAAAPAP3/AgABAAQAAAAPAPz/AgADAAIAAAAPAPv/AgAEAAAAAAAOAAsAAgAEAAUAAAAOAAoAAgAEAAMAAAAOAAkAAgAEAAIAAAAOAAgAAgAEAAMAAAAOAAcAAgACAAMAAAAOAAYAAgADAAMAAAAOAAUAAgADAAQAAAAOAAQAAgABAAEAAAAOAAMAAgABAAEAAAAOAAIAAgABAAEAAAAOAAEAAgAEAAIAAAAOAAAAAgABAAQAAAAOAP//AgACAAEAAAAOAP7/AgABAAIAAAAOAP3/AgACAAEAAAAOAPz/AgADAAQAAAAOAPv/AgAEAAAAAAANAAsAAgABAAUAAAANAAoAAgACAAMAAAANAAkAAgACAAEAAAANAAgAAgADAAIAAAANAAcAAgABAAQAAAANAAYAAgABAAQAAAANAAUAAgACAAIAAAANAAQAAgABAAQAAAANAAMAAgABAAQAAAANAAIAAgADAAQAAAANAAEAAgABAAIAAAANAAAAAgABAAMAAAANAP//AgABAAQAAAANAP7/AgACAAEAAAANAP3/AgABAAQAAAANAPz/AgABAAIAAAANAPv/AgAFAAAAAAAMAAsAAgADAAUAAAAMAAoAAgABAAEAAAAMAAkAAgAEAAIAAAAMAAgAAgACAAQAAAAMAAcAAgADAAIAAAAMAAYAAgABAAEAAAAMAAUAAgABAAEAAAAMAAQAAgABAAIAAAAMAAMAAgACAAQAAAAMAAIAAgACAAQAAAAMAAEAAgAEAAMAAAAMAAAAAgABAAQAAAAMAP//AgACAAMAAAAMAP7/AgABAAEAAAAMAP3/AgAEAAIAAAAMAPz/AgABAAQAAAAMAPv/AgACAAAAAAALAAsAAgABAAUAAAALAAoAAgADAAMAAAALAAkAAgADAAMAAAALAAgAAgAEAAMAAAALAAcAAgACAAEAAAALAAYAAgAEAAIAAAALAAUAAgACAAMAAAALAAQAAgADAAMAAAALAAMAAgADAAIAAAALAAIAAgABAAMAAAALAAEAAgADAAIAAAALAAAAAgABAAMAAAALAP//AgACAAMAAAALAP7/AgACAAEAAAALAP3/AgADAAMAAAALAPz/AgACAAIAAAALAPv/AgACAAAAAAAKAAsAAgACAAUAAAAKAAoAAgABAAQAAAAKAAkAAgACAAIAAAAKAAgAAgADAAQAAAAKAAcAAgAEAAIAAAAKAAYAAgACAAQAAAAKAAUAAgACAAQAAAAKAAQAAgABAAEAAAAKAAMAAgACAAMAAAAKAAIAAgABAAQAAAAKAAEAAgABAAIAAAAKAAAAAgACAAQAAAAKAP//AgAEAAIAAAAKAP7/AgADAAIAAAAKAP3/AgADAAMAAAAKAPz/AgAEAAMAAAAKAPv/AgACAAAAAAAJAAsAAgACAAUAAAAJAAoAAgAEAAMAAAAJAAkAAgABAAQAAAAJAAgAAgAEAAMAAAAJAAcAAgACAAQAAAAJAAYAAgACAAMAAAAJAAUAAgADAAIAAAAJAAQAAgABAAQAAAAJAAMAAgABAAMAAAAJAAIAAgAEAAIAAAAJAAEAAgABAAMAAAAJAAAAAgADAAQAAAAJAP//AgABAAQAAAAJAP7/AgABAAEAAAAJAP3/AgABAAMAAAAJAPz/AgADAAMAAAAJAPv/AgAEAAAAAAAIAAsAAgAEAAUAAAAIAAoAAgADAAQAAAAIAAkAAgACAAIAAAAIAAgAAgAEAAIAAAAIAAcAAgACAAIAAAAIAAYAAgACAAQAAAAIAAUAAgACAAQAAAAIAAQAAgACAAEAAAAIAAMAAgACAAMAAAAIAAIAAgABAAIAAAAIAAEAAgADAAIAAAAIAAAAAgABAAMAAAAIAP//AgABAAIAAAAIAP7/AgADAAMAAAAIAP3/AgABAAQAAAAIAPz/AgAEAAIAAAAIAPv/AgAFAAAAAAAHAAsAAgABAAUAAAAHAAoAAgADAAMAAAAHAAkAAgABAAIAAAAHAAgAAgABAAMAAAAHAAcAAgAEAAIAAAAHAAYAAgABAAQAAAAHAAQAAAADAAIAAAAHAAMAAgADAAQAAAAHAAIAAgABAAQAAAAHAAEAAgABAAQAAAAHAAAAAgACAAIAAAAHAP//AgABAAIAAAAHAP7/AgADAAMAAAAHAP3/AgACAAMAAAAHAPz/AgABAAMAAAAHAPv/AgAFAAAAAAAGAAsAAgABAAUAAAAGAAoAAgADAAQAAAAGAAkAAgAEAAMAAAAGAAgAAgACAAQAAAAGAAcAAgABAAQAAAAGAAYAAgADAAMAAAAGAAQAAgACAAIAAAAGAAMAAgACAAIAAAAGAAIAAgADAAQAAAAGAAEAAgADAAQAAAAGAAAAAgABAAIAAAAGAP//AgACAAIAAAAGAP7/AgABAAQAAAAGAP3/AgACAAEAAAAGAPz/AgADAAQAAAAGAPv/AgACAAAAAAAFAAsAAgACAAUAAAAFAAoAAgAEAAIAAAAFAAkAAgADAAQAAAAFAAgAAgACAAEAAAAFAAcAAgABAAMAAAAFAAYAAgACAAEAAAAFAAUAAgACAAIAAAAFAAQAAgAEAAMAAAAFAAMAAgABAAIAAAAFAAIAAgACAAIAAAAFAAEAAgADAAIAAAAFAAAAAgADAAQAAAAFAP//AgABAAMAAAAFAP7/AgADAAQAAAAFAP3/AgACAAIAAAAFAPz/AgADAAQAAAAFAPv/AgACAAAAAAAEAAsAAgADAAUAAAAEAAoAAgAEAAMAAAAEAAkAAgACAAMAAAAEAAgAAgABAAIAAAAEAAcAAgACAAEAAAAEAAYAAgABAAQAAAAEAAQAAgACAAEAAAAEAAMAAgADAAQAAAAEAAIAAgACAAMAAAAEAAEAAgADAAQAAAAEAAAAAgACAAIAAAAEAP//AgADAAIAAAAEAP7/AgABAAIAAAAEAP3/AgACAAQAAAAEAPz/AgACAAQAAAAEAPv/AgAEAAAAAAADAAsAAgABAAUAAAADAAoAAgADAAQAAAADAAkAAgACAAMAAAADAAgAAgABAAEAAAADAAcAAgADAAQAAAADAAYAAgACAAIAAAADAAUAAgAEAAMAAAADAAQAAgACAAQAAAADAAMAAgADAAIAAAADAAIAAgAEAAIAAAADAAEAAgACAAQAAAADAAAAAgACAAMAAAADAP//AgACAAIAAAADAP7/AgADAAMAAAADAP3/AgAEAAIAAAADAPz/AgACAAIAAAADAPv/AgABAAAAAAACAAsAAgADAAUAAAACAAoAAgAEAAIAAAACAAkAAgACAAEAAAACAAgAAgABAAIAAAACAAcAAgABAAIAAAACAAYAAgACAAEAAAACAAUAAgADAAMAAAACAAQAAgABAAIAAAACAAMAAgAEAAIAAAACAAIAAgADAAMAAAACAAEAAgACAAIAAAACAAAAAgACAAQAAAACAP//AgADAAIAAAACAP7/AgABAAMAAAACAP3/AgADAAIAAAACAPz/AgABAAQAAAACAPv/AgACAAAAAAABAAsAAgABAAUAAAABAAoAAgABAAQAAAABAAkAAgACAAMAAAABAAgAAgADAAIAAAABAAcAAgADAAQAAAABAAYAAgABAAEAAAABAAUAAgABAAMAAAABAAQAAgABAAQAAAABAAMAAgABAAQAAAABAAIAAgACAAIAAAABAAEAAgACAAQAAAABAAAAAgABAAEAAAABAP//AgACAAIAAAABAP7/AgACAAIAAAABAP3/AgABAAIAAAABAPz/AgABAAMAAAABAPv/AgAEAAAAAAAAAAsAAgADAAUAAAAAAAoAAgADAAQAAAAAAAkAAgACAAQAAAAAAAgAAgACAAIAAAAAAAcAAgABAAMAAAAAAAYAAgADAAIAAAAAAAUAAgAEAAIAAAAAAAQAAgABAAIAAAAAAAMAAgABAAEAAAAAAAIAAgACAAIAAAAAAAEAAgAEAAMAAAAAAAAAAgACAAEAAAAAAP//AgAEAAIAAAAAAP7/AgABAAIAAAAAAP3/AgACAAIAAAAAAPz/AgABAAEAAAAAAPv/AgABAAAAAAD//wsAAgABAAUAAAD//woAAgADAAMAAAD//wkAAgAEAAIAAAD//wgAAgACAAIAAAD//wcAAgABAAEAAAD//wYAAgAEAAMAAAD//wUAAgAEAAMAAAD//wQAAgAEAAIAAAD//wMAAgABAAQAAAD//wIAAgAEAAMAAAD//wEAAgADAAIAAAD//wAAAgACAAEAAAD/////AgABAAEAAAD///7/AgABAAIAAAD///3/AgABAAEAAAD///z/AgADAAIAAAD///v/AgACAAAAAAD+/wsAAgABAAUAAAD+/woAAgABAAEAAAD+/wkAAgABAAMAAAD+/wgAAgACAAIAAAD+/wcAAgACAAMAAAD+/wYAAgADAAIAAAD+/wUAAgACAAQAAAD+/wQAAgABAAEAAAD+/wMAAgAEAAIAAAD+/wIAAgAEAAMAAAD+/wEAAgACAAQAAAD+/wAAAgAEAAMAAAD+////AgACAAIAAAD+//7/AgABAAMAAAD+//3/AgADAAMAAAD+//z/AgADAAIAAAD+//v/AgAFAAAAAAD9/wsAAgABAAUAAAD9/woAAgABAAIAAAD9/wkAAgAEAAMAAAD9/wgAAgAEAAIAAAD9/wcAAgACAAEAAAD9/wYAAgAEAAIAAAD9/wUAAgADAAQAAAD9/wQAAgACAAMAAAD9/wMAAgADAAQAAAD9/wIAAgADAAQAAAD9/wEAAgABAAEAAAD9/wAAAgADAAMAAAD9////AgADAAMAAAD9//7/AgABAAQAAAD9//3/AgABAAMAAAD9//z/AgABAAQAAAD9//v/AgAFAAAAAAD8/wsAAgADAAUAAAD8/woAAgACAAIAAAD8/wkAAgADAAMAAAD8/wgAAgAEAAIAAAD8/wcAAgAEAAIAAAD8/wYAAQAAAAAAAQD8/wUAAgACAAQAAAD8/wQAAgACAAEAAAD8/wMAAgADAAQAAAD8/wIAAgADAAIAAAD8/wEAAgACAAIAAAD8/wAAAgADAAMAAAD8////AgACAAQAAAD8//7/AgACAAMAAAD8//3/AgACAAQAAAD8//z/AgABAAMAAAD8//v/AgABAAAAAAD7/wsAAgADAAUAAAD7/woAAgADAAMAAAD7/wkAAgABAAMAAAD7/wgAAgACAAEAAAD7/wcAAgACAAMAAAD7/wYAAgAEAAIAAAD7/wUAAgABAAIAAAD7/wQAAgADAAMAAAD7/wMAAgACAAIAAAD7/wIAAgACAAMAAAD7/wEAAgACAAMAAAD7/wAAAgACAAQAAAD7////AgACAAMAAAD7//7/AgADAAMAAAD7//3/AgADAAMAAAD7//z/AgACAAEAAAD7//v/AgAFAAAAAAD6/wsAAgAEAAUAAAD6/woAAgACAAIAAAD6/wkAAgABAAMAAAD6/wgAAgABAAEAAAD6/wcAAgABAAEAAAD6/wYAAgADAAQAAAD6/wUAAgADAAQAAAD6/wQAAgABAAIAAAD6/wMAAgADAAMAAAD6/wIAAgACAAQAAAD6/wEAAgABAAMAAAD6/wAAAgABAAEAAAD6////AgADAAMAAAD6//7/AgACAAMAAAD6//3/AgACAAQAAAD6//z/AgADAAMAAAD6//v/AgABAAAAAAD5/wsAAgAEAAUAAAD5/woAAgABAAMAAAD5/wkAAgAEAAMAAAD5/wgAAgADAAIAAAD5/wcAAgABAAEAAAD5/wYAAgABAAMAAAD5/wUAAgACAAEAAAD5/wQAAgACAAIAAAD5/wMAAgACAAMAAAD5/wIAAgABAAQAAAD5/wEAAgABAAQAAAD5/wAAAgABAAQAAAD5////AgADAAIAAAD5//7/AgAEAAIAAAD5//3/AgADAAMAAAD5//z/AgABAAIAAAD5//v/AgAFAAAAAAD4/wsAAgAAAAUAAAD4/woAAgAAAAEAAAD4/wkAAgAAAAIAAAD4/wgAAgAAAAIAAAD4/wcAAgAAAAQAAAD4/wYAAgAAAAIAAAD4/wUAAgAAAAEAAAD4/wQAAgAAAAMAAAD4/wMAAgAAAAEAAAD4/wIAAgAAAAIAAAD4/wEAAgAAAAMAAAD4/wAAAgAAAAQAAAD4////AgAAAAQAAAD4//7/AgAAAAQAAAD4//3/AgAAAAIAAAD4//z/AgAAAAIAAAD4//v/AgAAAAAAAAAHAAUAAgACAAIAAAAEAAUAAgACAAQAAAAGAAUAAgACAAIAAAA=")
tile_set = ExtResource("2_6tci0")

[node name="OBJ" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAFAAYAAAAIAAEAAAA=")
tile_set = ExtResource("2_6tci0")

[node name="Lab_savePoint_exitpoint" type="Area2D" parent="."]
position = Vector2(120, 80)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lab_savePoint_exitpoint"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_0wt11")

[node name="Choose_map" type="Area2D" parent="."]
position = Vector2(240, 160)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choose_map"]
position = Vector2(-151, -54)
shape = SubResource("RectangleShape2D_glhmy")

[node name="npc" parent="." instance=ExtResource("5_daqkn")]
position = Vector2(16, 96)
platform_floor_layers = 4278190095
platform_wall_layers = 15

[node name="stick_collectable4" parent="." instance=ExtResource("6_l82bj")]
position = Vector2(144, 0)

[node name="stick_collectable3" parent="." instance=ExtResource("6_l82bj")]
position = Vector2(240, 0)

[node name="stick_collectable2" parent="." instance=ExtResource("6_l82bj")]
position = Vector2(192, 0)

[node name="stick_collectable" parent="." instance=ExtResource("6_l82bj")]
position = Vector2(96, 0)

[node name="player" parent="." instance=ExtResource("4_eemfa")]
position = Vector2(96, 53)

[connection signal="body_entered" from="Lab_savePoint_exitpoint" to="." method="_on_home_exitpoint_body_entered"]
[connection signal="body_exited" from="Lab_savePoint_exitpoint" to="." method="_on_home_exitpoint_body_exited"]
[connection signal="body_entered" from="Choose_map" to="." method="_on_choose_map_body_entered"]
[connection signal="apple_collected" from="player" to="npc" method="_on_player_apple_collected"]
[connection signal="slime_collected" from="player" to="npc" method="_on_player_slime_collected"]
[connection signal="stick_collected" from="player" to="npc" method="_on_player_stick_collected"]
